[metadata]
name = wandb_osh
version = 1.0.4
description = Trigger wandb offline syncs from a compute node without internet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klieret/wandb-offline-sync-hook
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
license = MIT
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker =   https://github.com/klieret/wandb-offline-sync-hook/issues
    Documentation = https://wandb_osh.readthedocs.io/
    Source Code =   https://github.com/klieret/wandb-offline-sync-hook
python_requires = >=3.7

[options]
packages = find:
install_requires =
    colorlog
    wandb
    importlib-metadata>=0.12;python_version<"3.8"
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wandb-osh = wandb_osh.cli:main

[options.extras_require]
ray =
    ray[tune]
testing =
    pytest
    pytest-coverage
